fix(spotdetailspage): fix spacing and image width

--- a/src/pages/spotdetailspage.css
+++ b/src/pages/spotdetailspage.css
@@ -10,7 +10,8 @@
 .detailed-carousel-container {
   position: relative;
   border-radius: 0em; 
-  overflow: hidden; 
+  overflow: hidden;
+  width: 100%
 }
 
 .skeleton-detailed-page {
@@ -22,7 +23,7 @@
 
 .detailed-content {
   padding: 1em 2em;
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: space-between
 }
@@ -105,18 +106,19 @@
 .booking-box {
   margin: 2em 0em; 
   padding: 2em;
-  border-radius: 1em; 
-  box-shadow: 0 2px 4px rgba(186, 183, 183, 0.6);
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: fit-content
+  max-width: 50%;
+  height: fit-content;
+  border-radius: 1em; 
+  box-shadow: 0 2px 4px rgba(186, 183, 183, 0.6);
 }
 
 .left-content {
   margin-right: 2em;
   margin-bottom: 2em;
+  width: 100%;
 }
 
 .priceperday {
@@ -168,7 +170,7 @@
   }
   .detailed-content {
     margin: 0em 0em 4em;
-    padding: 0;
+    padding: 1em 2em;
     display: flex; 
     flex-direction: column;
     justify-content: flex-start;
